--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button {
 
 body {
   font-family: "Uindbase Font 1", sans-serif;
+  color: #ffffff;
   background: linear-gradient(180deg, #0e141c 0%, #0a0f14 100%);
 }
 
@@ -122,7 +123,6 @@ body {
   display: flex;
   /* align-items: center; */
   justify-content: center;
-  color: #ffffff;
   width: 100%;
 }
 
@@ -172,6 +172,9 @@ body {
   line-height: 113.23px;
   text-align: center;
   padding: 47px 0 17px 0;
+  text-shadow: -3px 0 5px #d1c12b, 3px 0 5px #a332ca;
+  /* text-shadow: 10px 24px 10px 0px rgba(0, 0, 0, 0.37); */
+  text-shadow: 10px 24px 10px 0px #0000005e;
 }
 
 .hero__subtitle {
@@ -179,6 +182,8 @@ body {
   font-size: 25px;
   font-weight: 400;
   line-height: 25px;
+  margin-top: 40px;
+  text-transform: uppercase;
 }
 
 .hero__button {
@@ -209,4 +214,93 @@ body {
   text-align: center;
   color: #d1c12b;
   text-shadow: 0 0 8px #d1c12b, 0 0 16px #d1c12b;
+}
+
+/* Season */
+.season {
+  /* margin-top: 214px; */
+  margin: 214px 0;
+}
+
+.season__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: relative;
+  width: 100%;
+  z-index: 0;
+}
+
+.season__title {
+  font-size: 100px;
+  width: 100%;
+  font-weight: 400;
+  line-height: 100px;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.season__content::before {
+  content: "на этот сезон";
+  color: #1f252d;
+  position: absolute;
+
+  font-family: "Usually-font-Bold", sans-serif;
+  font-weight: 700;
+  text-align: center;
+  z-index: -1;
+  top: -40px;
+  font-size: 140px;
+  line-height: 160px;
+}
+
+.season__inner {
+  width: 1248px;
+  height: 587px;
+  z-index: 3;
+  background-image: url("./assets/images/season_bg.png");
+  margin: 56px 0 16px 0;
+  position: relative;
+}
+
+.season__inner-item {
+  position: absolute;
+  width: 300px;
+  top: 310px;
+  right: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 15px;
+}
+
+.season__inner-item p {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 15px;
+  text-align: center;
+}
+
+.season__arrow {
+  position: absolute;
+  width: 209px;
+  bottom: 33px;
+  left: 25px;
+  border: 3px;
+}
+
+.season__lines {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.season__line {
+  width: 161px;
+  height: 2px;
+  background-color: white;
+  border: 2px;
 }
