--- a/style.css
+++ b/style.css
@@ -414,3 +414,65 @@ body {
   color: white;
   text-transform: uppercase;
 }
+
+/* Contact */
+
+.contact {
+  margin-top: 120px;
+}
+
+.contact__content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 55px;
+  position: relative;
+}
+
+.contact__content::before {
+  content: "Контакты";
+  text-transform: uppercase;
+  color: #1f252d;
+  position: absolute;
+  top: -30px;
+
+  font-family: "Usually-font-Bold", sans-serif;
+  font-size: 160px;
+  font-weight: 700;
+  line-height: 160px;
+  text-align: right;
+
+  z-index: -1;
+}
+
+.contact__title {
+  /* font-family: Uindbase Font 1; */
+  font-size: 100px;
+  font-weight: 400;
+  line-height: 100px;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.contact__actions {
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+
+.contact__details {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.contact__details p {
+  /* font-family: Uindbase Font 1; */
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 25px;
+  text-align: left;
+}
