--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
   justify-content: space-between;
 }
 
+.header__options {
+  display: none;
+}
+
 .header__left {
   display: flex;
   flex-direction: column;
@@ -677,7 +681,7 @@ body {
     padding: 40px 0;
   }
   .hero__social {
-    display: block;
+    display: inline;
     padding-top: 35px;
   }
 
@@ -827,4 +831,216 @@ body {
 }
 
 @media (max-width: 428px) {
+  .container {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  .header__left {
+    display: none;
+  }
+
+  .header__right {
+    display: inline;
+  }
+
+  .header__right img {
+    width: auto;
+    height: 15px;
+  }
+
+  .header__content {
+    align-items: center;
+  }
+
+  .header__options {
+    display: inline;
+  }
+
+  .header__options img {
+    width: 53px;
+    height: 32px;
+  }
+
+  .header {
+    margin-top: 21px;
+  }
+
+  /* Hero */
+  .hero {
+    margin-top: 55px;
+  }
+
+  .hero::before {
+    top: -50px;
+    font-size: 60px;
+    line-height: 52.26px;
+  }
+  .hero__title {
+    padding: 30px 0;
+    font-size: 40px;
+    line-height: 34.84px;
+  }
+
+  .hero__subtitle {
+    font-size: 25px;
+    line-height: 25px;
+  }
+
+  .hero__content {
+    gap: 50px;
+    align-items: flex-end;
+  }
+
+  .hero__social {
+    display: none;
+  }
+
+  .hero__actions {
+    margin-top: 150px;
+  }
+
+  .hero__button {
+    width: 196px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .hero__button img {
+    width: 21.99px;
+    height: 16px;
+
+    /* width: 23px; */
+    margin: 0;
+    /* height: 16px; */
+    margin-left: 30px;
+  }
+
+  .hero__button p {
+    flex: 1;
+    text-align: center;
+    padding: 17.5px 0;
+  }
+
+  /* Season */
+  .season__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+  }
+
+  .season__title {
+    font-size: 60px;
+    line-height: 60px;
+    text-align: left;
+    padding-left: 20px;
+    margin-bottom: 0;
+  }
+
+  .season__content::before {
+    text-align: left;
+    top: -8px;
+    font-size: 60px;
+    font-weight: 700;
+    line-height: 60px;
+    left: 20px;
+  }
+
+  .season__inner {
+    width: 100%;
+    height: 495px;
+    margin: 0;
+    margin-bottom: 20px;
+    position: relative;
+  }
+
+  .season__arrow {
+    bottom: 37px;
+    left: 106px;
+  }
+
+  .season__lines {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  .season__line {
+    width: 51px;
+  }
+
+  /* Actual */
+  .actual {
+    margin-top: 85px;
+  }
+
+  .actual__content {
+    align-items: flex-end;
+    gap: 0;
+    overflow-x: hidden;
+  }
+
+  .actual__content::before {
+    content: "Актуа льное";
+    font-size: 80px;
+    font-weight: 700;
+    line-height: 60px;
+    text-align: right;
+    top: -40px;
+  }
+
+  .actual__title {
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 60px;
+    text-align: right;
+  }
+
+  .actual__cards {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
+    gap: 13px;
+  }
+
+  .actual__cards::-webkit-scrollbar {
+    display: none;
+  }
+
+  .actual__card {
+    min-width: 180px;
+    display: inline-block;
+  }
+  .actual__card:nth-child(2),
+  .actual__card:nth-child(3) {
+    display: inline;
+  }
+
+  .actual__card-img {
+    width: 180px;
+    height: 250px;
+  }
+
+  .actual__card-title {
+    font-size: 15px;
+    line-height: 15px;
+    text-align: left;
+  }
+
+  .actual__card-cost {
+    font-size: 15px;
+    line-height: 15px;
+    text-align: left;
+  }
+
+  .actual__card-cart {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 15px;
+    text-align: left;
+  }
 }
